# FrogIT

./: .clang-format  .gitignore  Behavior_AnimateFrog.drawio  Behavior_FrogOnClick.drawio  CMakeLists.txt  CREDITS.md  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  imgui.ini
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
assets/: phrases.json
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
docs/: Architecture Principles.md  ArchitectureDocumentation.md  Behavior_AnimateFrog.drawio  Behavior_FrogOnClick.drawio  Behavior_FrogTrolling.drawio  Class_FrogApp.txt  FrogIT_Präsentation.pptx  Handout.md  Präsentation.md  Quality Tree FrogIT.md  RMMM.xlsx  Refactoring1.md  Review_Protocol.md  Sequence_FrogSounds.txt  Sequence_FrogText.txt  SoftwareRequirementsSpecification.md  comp1.plantUML  comp2.plantUML  comp3.plantUML  sequence1.plantUML  sequence2.plantUML  sequence3.plantUML  sequence4.plantUML  test_plan.md  use_case_diagram.drawio
docs/ADRs/: ADR0001.md  ADR0002.md  ADR0003.md
fuzz_test/: CMakeLists.txt
include/FrogIT/: sample_library.hpp
src/: CMakeLists.txt
src/FrogIT/: Frog.hpp  FrogApp.hpp  Position.hpp  Sound.hpp
src/FrogITApp/: CMakeLists.txt  Constants.hpp  Frog.cpp  Frog.hpp  FrogApp.cpp  FrogApp.hpp  FrogSettingsUI.cpp  FrogSettingsUI.hpp  Main.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  Sound.hpp  SoundScape.hpp  SoundScapeManager.cpp  SoundScapeManager.hpp  WindowHandling.cpp  WindowHandling.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
